# net-analyzer-ipc

./: .gitignore  CMakeLists.txt  README.md
scripts/: cli.py
src/: PacketQueue.hpp  logger.hpp  main.cpp  ns3_analyzer.cpp  ns3_analyzer.hpp  stats_aggregator.hpp  tarantool_sink.cpp  tarantool_sink.hpp
tarantool/: cleanup.lua  init.lua  metrics.lua
